# server/internal/domain/models/path.go
@@ -4,3 +4,8 @@ type Path struct {
 	Depth      int    `json:"d"`
 	PathString string `json:"path"`
 }
+
+type PathResponse struct {
+	Depth     int      `json:"path_depth"`
+	PathArray []string `json:"path"`
+}
